--- a/UI/Client/ProviderLookupDialog.xaml
+++ b/UI/Client/ProviderLookupDialog.xaml
@@ -29,10 +29,9 @@
 							 ItemsSource="{Binding Path=ProviderCollection}">
 						<ListView.View>
 							<GridView>								
-								<GridViewColumn Header="Name" Width="350" DisplayMemberBinding="{Binding Path=Physician.DisplayName}" />
-                                <GridViewColumn Header="NPI" Width="100" DisplayMemberBinding="{Binding Path=Physician.Npi}" />
-                                <GridViewColumn Header="Phone" Width="130" DisplayMemberBinding="{Binding Path=Client.Telephone,Converter={StaticResource PhoneNumberConverter}}" />
-                                <GridViewColumn Header="Fax" Width="130" DisplayMemberBinding="{Binding Path=Client.Fax,Converter={StaticResource PhoneNumberConverter}}" />
+								<GridViewColumn Header="Name" Width="350" DisplayMemberBinding="{Binding Path=Physician.DisplayName}" />                                
+                                <GridViewColumn Header="Phone" Width="130" DisplayMemberBinding="{Binding Path=Client.FormattedTelephone}" />
+                                <GridViewColumn Header="Fax" Width="130" DisplayMemberBinding="{Binding Path=Client.FormattedFax}" />
                             </GridView>
 						</ListView.View>
 					</ListView>
@@ -64,7 +63,8 @@
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Client Name" Width="300" DisplayMemberBinding="{Binding Path=ClientName}" />
-                                <GridViewColumn Header="City" Width="280" DisplayMemberBinding="{Binding Path=City}" />
+                                <GridViewColumn Header="Phone" Width="200" DisplayMemberBinding="{Binding Path=FormattedTelephone}" />
+                                <GridViewColumn Header="Fax" Width="200" DisplayMemberBinding="{Binding Path=FormattedFax}" />
                             </GridView>
                         </ListView.View>
                     </ListView>
