--- a/UI/PantherOrdersDialog.xaml
+++ b/UI/PantherOrdersDialog.xaml
@@ -30,6 +30,11 @@
                     <TextBlock Grid.Column="0" Grid.Row="0">The following cases need Panther Aliquots</TextBlock>
                     
                     <ListView Grid.Column="0" Grid.Row="1" Name="ListViewPantherAliquots" Margin="2,2,2,2" ItemsSource="{Binding Path=PantherAliquotList}">
+                        <ListView.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Click="ContextMenuValidate_Click" Header="Validate"></MenuItem>
+                            </ContextMenu>
+                        </ListView.ContextMenu>
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="Master Accession No" DisplayMemberBinding="{Binding Path=MasterAccessionNo}" Width="100" />
