--- a/UI/Surgical/PqrsSignoutPage.xaml
+++ b/UI/Surgical/PqrsSignoutPage.xaml
@@ -27,11 +27,31 @@
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold" Text="{Binding Path=PQRSMeasure.Header}"/>
 
-            <ListBox x:Name="RadioButtonList" Grid.Column="1" Grid.Row="1" BorderThickness="0" Background="{x:Null}" Margin="5,5,5,5"
+            <Grid Grid.Column="1" Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                
+                <TextBlock Grid.Column="0" Grid.Row="0" Margin="5,5,5,5" VerticalAlignment="Top" HorizontalAlignment="Right" Text="Specimen Description:" />
+                <TextBlock Grid.Column="1" Grid.Row="0" Margin="5,5,5,5" Text="{Binding Path=SurgicalSpecimen.SpecimenOrder.Description}" TextWrapping="Wrap" />
+
+                <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,5,5,5" VerticalAlignment="Top" HorizontalAlignment="Right" Text="Diagnosis:" />
+                <TextBlock Grid.Column="1" Grid.Row="1" Margin="5,5,5,5" Text="{Binding Path=SurgicalSpecimen.Diagnosis}" TextWrapping="Wrap" />
+
+            </Grid>
+
+            <ListBox x:Name="RadioButtonList" Grid.Column="1" Grid.Row="2" BorderThickness="0" Background="{x:Null}" Margin="5,5,5,5"
 				    ItemsSource="{Binding Path=PQRSMeasure.PQRSCodeCollection}" SelectionChanged="RadioButtonList_SelectionChanged">
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -55,8 +75,8 @@
                 </ListBox.ItemContainerStyle>
             </ListBox>
 
-            <CheckBox Name="CheckBoxNotApplicable" Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" Content="PQRS is not applicable for this case."
-				    Checked="CheckBoxNotApplicable_Checked"/>
+            <CheckBox Name="CheckBoxNotApplicable" Grid.Column="1" Grid.Row="3" Margin="2,2,2,2" VerticalAlignment="Center" Content="PQRS is not applicable for this case."
+				    Checked="CheckBoxNotApplicable_Checked" IsChecked="{Binding Path=SurgicalTestOrder.PQRSNotApplicable}"/>
         </Grid>
 
         <Button Grid.Column="0" Grid.Row="2" Margin="5,5,5,5" Height="40" Width="100" HorizontalAlignment="Left" Click="ButtonBack_Click" Visibility="{Binding Path=BackButtonVisibility}">&lt; Back</Button>
