Add IDCEntry to Missing Information Result Page and path

--- a/UI/Test/MissingInformationResultPage.xaml
+++ b/UI/Test/MissingInformationResultPage.xaml
@@ -39,6 +39,7 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
@@ -78,19 +79,25 @@
 					</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
+                <TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,0">                    
+                    <Hyperlink Click="HyperLinkShowICDEntryPage_Click">
+						<TextBlock Text="ICD Entry" />
+					</Hyperlink>
+				</TextBlock>
+
+                <TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
 					<Hyperlink Click="HyperLinkFinalize_Click">
 						<TextBlock Text="Finalize" />
 					</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="9" Margin="5,3,0,0">                    
+                <TextBlock Grid.Column="0" Grid.Row="10" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnfinalResults_Click">
 						<TextBlock Text="Unfinalize" />
 					</Hyperlink>
 				</TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="10" Margin="5,3,0,0">                    
+                <TextBlock Grid.Column="0" Grid.Row="11" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkClearResults_Click">
 						<TextBlock Text="Clear" />
 					</Hyperlink>
