--- a/UI/AmendmentPage.xaml
+++ b/UI/AmendmentPage.xaml
@@ -3,8 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:YellowstonePathology.UI"
-             FontSize="14">
+             xmlns:local="clr-namespace:YellowstonePathology.UI">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -28,6 +27,9 @@
             <Border Grid.Row="0" Grid.Column="0" BorderBrush="Transparent" BorderThickness="0" Background="{DynamicResource {x:Static SystemColors.InactiveCaptionBrushKey}}"></Border>
 
             <Grid Grid.Column="0" Margin="10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition MinWidth="120" Width="Auto"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
@@ -65,6 +67,7 @@
             <Grid Grid.Column="1" Grid.Row="1" Margin="10" KeyUp="GridSelectedAmendment_KeyUp">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
@@ -106,9 +109,9 @@
                 <CheckBox Grid.Column="1" Grid.Row="6" Margin="2,2,2,2" IsChecked="{Binding Path=Amendment.DistributeOnFinal}"></CheckBox>
 
                 <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,0" FontWeight="Bold">Amendment:</TextBlock>
-                <TextBox Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2" Margin="2,0,2,2" Text="{Binding Path=Amendment.Text}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
+                <TextBox Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="3" Margin="2,0,2,2" Text="{Binding Path=Amendment.Text}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
 
-                <Grid Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2">
+                <Grid Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="3">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"></ColumnDefinition>
                         <ColumnDefinition Width="*"></ColumnDefinition>
