--- a/UI/AmendmentPage.xaml
+++ b/UI/AmendmentPage.xaml
@@ -34,7 +34,6 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
-                    <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
                     <RowDefinition Height="Auto"></RowDefinition>
@@ -43,22 +42,18 @@
                 <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkSet_Click">Set</Hyperlink>
-                </TextBlock>
-
-                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAccept_Click">Accept</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,5">
+                <TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,5">
 					<Hyperlink Click="HyperLinkFinalize_Click">Finalize</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">                    
+                <TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnaccept_Click">Unaccept</Hyperlink>
                 </TextBlock>
 
-                <TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,0">                    
+                <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnfinalize_Click">Unfinalize</Hyperlink>
                 </TextBlock>
 
@@ -88,7 +83,19 @@
                 <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=Amendment.ReportNo}"/>
 
                 <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold">Reference Report No:</TextBlock>
-                <TextBlock Grid.Column="1" Grid.Row="1" Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=Amendment.ReferenceReportNo}"/>
+                <Grid  Grid.Column="1" Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="75"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    
+                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=Amendment.ReferenceReportNo}"/>
+
+                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2">                    
+                        <Hyperlink Click="HyperLinkResetAmendmentText_Click">Reset Amendment Text</Hyperlink>
+                    </TextBlock>
+
+                </Grid>
 
                 <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold">Amendment Type:</TextBlock>
                 <ComboBox Grid.Column="1" Grid.Row="2" Margin="2,2,2,2" Text="{Binding Path=Amendment.AmendmentType}" HorizontalAlignment="Stretch">
