--- a/UI/Test/TrichomonasResultPage.xaml
+++ b/UI/Test/TrichomonasResultPage.xaml
@@ -32,11 +32,9 @@
                 <Grid.RowDefinitions>
 					<RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
-					<RowDefinition Height="20"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
-					<RowDefinition Height="Auto"></RowDefinition>
-					<RowDefinition Height="Auto"></RowDefinition>
-					<RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
 					<RowDefinition Height="Auto"></RowDefinition>
 				</Grid.RowDefinitions>
@@ -44,26 +42,22 @@
 				<TextBlock Grid.Column="0" Grid.Row="0" Margin="0,3,0,0" FontWeight="Bold" FontSize="14">Options</TextBlock>
 
 				<TextBlock Grid.Column="0" Grid.Row="1" Margin="5,3,0,0">                    
-                    <Hyperlink Click="HyperLinkSetResults_Click">Set Results</Hyperlink>
-				</TextBlock>
-
-				<TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkAcceptResults_Click">Accept Results</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0">                    
+				<TextBlock Grid.Column="0" Grid.Row="2" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkShowDocument_Click">Show Document</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,5">
+				<TextBlock Grid.Column="0" Grid.Row="3" Margin="5,3,0,5">
 					<Hyperlink Click="HyperLinkFinalize_Click">Finalize</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="7" Margin="5,3,0,0">                    
+				<TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnacceptResults_Click">Unaccept Results</Hyperlink>
 				</TextBlock>
 
-				<TextBlock Grid.Column="0" Grid.Row="8" Margin="5,3,0,0">                    
+				<TextBlock Grid.Column="0" Grid.Row="6" Margin="5,3,0,0">                    
                     <Hyperlink Click="HyperLinkUnfinalResults_Click">Unfinalize Results</Hyperlink>
 				</TextBlock>
 
@@ -85,15 +79,8 @@
 					</Grid.RowDefinitions>
 
 					<TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" FontWeight="Bold">Result:</TextBlock>
-					<Grid Grid.Column="1" Grid.Row="0">
-						<Grid.ColumnDefinitions>
-							<ColumnDefinition Width="*"></ColumnDefinition>
-							<ColumnDefinition Width="Auto"></ColumnDefinition>
-						</Grid.ColumnDefinitions>
-						<ComboBox Name="ComboBoxResult" Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" ItemsSource="{Binding Path=ResultCollection}" DisplayMemberPath="Result" 
-							  SelectedValue="{Binding Path=ReportOrder.Result}" SelectedValuePath="Result" HorizontalAlignment="Stretch" SelectionChanged="ComboBoxResult_SelectionChanged"/>
-						<TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" Text="{Binding Path=ReportOrder.ResultCode}"></TextBlock>
-					</Grid>
+					<ComboBox Name="ComboBoxResult" Grid.Column="1" Grid.Row="0" Margin="2,2,2,2" ItemsSource="{Binding Path=ResultCollection}" DisplayMemberPath="Result"
+                              SelectedValue="{Binding Path=ReportOrder.Result}" SelectedValuePath="Result" HorizontalAlignment="Stretch"/>
 
 					<TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" FontWeight="Bold">Method:</TextBlock>
 					<TextBox Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2" Margin="2,2,2,2" Text="{Binding Path=ReportOrder.Method}" TextWrapping="Wrap" AcceptsReturn="True"></TextBox>
