--- a/UI/Surgical/ColorectalCancerOrderPage.xaml
+++ b/UI/Surgical/ColorectalCancerOrderPage.xaml
@@ -49,7 +49,7 @@
                 </TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="4" Margin="5,3,0,0" TextWrapping="Wrap">                    
-                    <Hyperlink Click="HyperLinkHighRiskHPV_Click">High Risk HPV TWI</Hyperlink>
+                    <Hyperlink Click="HyperLinkHighRiskHPV_Click">High Risk HPV</Hyperlink>
                 </TextBlock>
 
                 <TextBlock Grid.Column="0" Grid.Row="5" Margin="5,3,0,0" TextWrapping="Wrap">                    
