--- a/UI/Cytology/CytologyResultsWorkspace.xaml
+++ b/UI/Cytology/CytologyResultsWorkspace.xaml
@@ -220,7 +220,8 @@
 									<ColumnDefinition Width="Auto"></ColumnDefinition>
 									<ColumnDefinition Width="*"></ColumnDefinition>
 									<ColumnDefinition Width="Auto"></ColumnDefinition>
-								</Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
 								<Grid.RowDefinitions>
 									<RowDefinition></RowDefinition>
 									<RowDefinition></RowDefinition>
@@ -231,8 +232,9 @@
 								<TextBlock Grid.Column="0" Grid.Row="1" Text="Accepted Date:" Margin="2" FontWeight="Bold"/>
 								<TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Path=AcceptedTime, Converter={StaticResource ShortDateTimeConverter}}" Margin="2" FontWeight="Bold"/>
 
-								<Button  Grid.Column="2" Grid.Row="1" Height="20" Width="50" Margin="2,2,2,2" ToolTip="Delete Dot Review" Click="ButtonAcidWashDelete_Click" HorizontalAlignment="Right">Delete</Button>
-							</Grid>
+                                <Button  Grid.Column="2" Grid.Row="1" Height="20" Width="50" Margin="2,2,2,2" ToolTip="Delete Dot Review" Click="ButtonAcidWashAccept_Click"  HorizontalAlignment="Right">Accept</Button>
+								<Button  Grid.Column="3" Grid.Row="1" Height="20" Width="50" Margin="2,2,2,2" ToolTip="Delete Dot Review" Click="ButtonAcidWashDelete_Click" HorizontalAlignment="Right">Delete</Button>
+                            </Grid>
 						</Border>
 					</Grid>
 				</Expander>
