--- a/UI/Cytology/CytologyResultsWorkspace.xaml
+++ b/UI/Cytology/CytologyResultsWorkspace.xaml
@@ -221,19 +221,21 @@
 									<ColumnDefinition Width="*"></ColumnDefinition>
 									<ColumnDefinition Width="Auto"></ColumnDefinition>
                                     <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                    <ColumnDefinition Width="Auto"></ColumnDefinition>
                                 </Grid.ColumnDefinitions>
 								<Grid.RowDefinitions>
 									<RowDefinition></RowDefinition>
 									<RowDefinition></RowDefinition>
 								</Grid.RowDefinitions>
 
-								<TextBlock Grid.Column="0" Grid.Row="0" Text="Accepted:" Margin="2" FontWeight="Bold" HorizontalAlignment="Right"/>
-								<TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Path=Accepted}" Margin="2" FontWeight="Bold"/>
+								<TextBlock Grid.Column="0" Grid.Row="0" Text="Comment:" Margin="2" FontWeight="Bold" HorizontalAlignment="Right"/>
+								<TextBox Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="4" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding Path=Comment}" Margin="2"/>
 								<TextBlock Grid.Column="0" Grid.Row="1" Text="Accepted Date:" Margin="2" FontWeight="Bold"/>
 								<TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding Path=AcceptedTime, Converter={StaticResource ShortDateTimeConverter}}" Margin="2" FontWeight="Bold"/>
 
-                                <Button  Grid.Column="2" Grid.Row="1" Height="20" Width="50" Margin="2,2,2,2" ToolTip="Delete Dot Review" Click="ButtonAcidWashAccept_Click"  HorizontalAlignment="Right">Accept</Button>
-								<Button  Grid.Column="3" Grid.Row="1" Height="20" Width="50" Margin="2,2,2,2" ToolTip="Delete Dot Review" Click="ButtonAcidWashDelete_Click" HorizontalAlignment="Right">Delete</Button>
+                                <Button  Grid.Column="2" Grid.Row="1" Height="20" Width="60" Margin="2,2,2,2" ToolTip="Delete Dot Review" Click="ButtonAcidWashAccept_Click"  HorizontalAlignment="Right">Accept</Button>
+                                <Button  Grid.Column="3" Grid.Row="1" Height="20" Width="60" Margin="2,2,2,2" ToolTip="Delete Dot Review" Click="ButtonAcidWashUnaccept_Click"  HorizontalAlignment="Right">Unaccept</Button>
+                                <Button  Grid.Column="4" Grid.Row="1" Height="20" Width="60" Margin="2,2,2,2" ToolTip="Delete Dot Review" Click="ButtonAcidWashDelete_Click" HorizontalAlignment="Right">Delete</Button>
                             </Grid>
 						</Border>
 					</Grid>
@@ -371,7 +373,7 @@
 					<TextBox Grid.Column="1" Grid.Row="0" Width="100" Name="TextBoxReportNoSearch"
                              Text="{Binding ElementName=CytologyResultUserControl, Path=ReportNo}" 
                              Margin="2,2,2,2" FontWeight="Bold" GotFocus="TextBoxReportNoSearch_GotFocus"
-                             KeyUp="TextBoxReportNoSearch_KeyUp" HorizontalAlignment="Left"/>
+                             KeyUp="TextBoxReportNoSearch_KeyUp" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
 					<TextBlock Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="2,2,2,2">Patient Name:</TextBlock>
 					<StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal">
