Add Panther Storage Dialog

--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -52,6 +52,7 @@
 				<MenuItem Header="Login" Click="MenuItemLogin_Click" />
                 <MenuItem Header="Material Tracking" Click="MenuItemMaterialTracking_Click" />
                 <MenuItem Header="Panther Orders" Click="MenuItemPantherOrders_Click" />
+                <MenuItem Header="Panther Storage" Click="MenuItemPantherStorage_Click" />
                 <MenuItem Header="Acid Wash Orders" Click="MenuItemAcidWashOrders_Click" />
             </MenuItem>
 
